# ai-course-exercises

./: README.md
combo1-agentic-engineering-intro/tiny-agent/: .env.example  README.md  verify.sh
combo1-agentic-engineering-intro/tiny-agent/reference/: agent.py
combo1-agentic-engineering-intro/tiny-agent/sample_repo/: README.md  hello.py
combo2-advanced-agentic-engineering/claude-code-skills/: .gitignore  CLAUDE.md.example  README.md
combo2-advanced-agentic-engineering/cross-tool-skills/: README.md
combo2-advanced-agentic-engineering/cross-tool-skills/amp/: AGENTS.md  README.md
combo2-advanced-agentic-engineering/cross-tool-skills/codex/: AGENTS.md  README.md
combo2-advanced-agentic-engineering/cross-tool-skills/cursor/: AGENTS.md  README.md
combo2-advanced-agentic-engineering/cross-tool-skills/gemini-cli/: GEMINI.md  README.md
combo2-advanced-agentic-engineering/cross-tool-skills/opencode/: README.md  opencode.json
combo2-advanced-agentic-engineering/expense-categoriser/: .env.example  README.md  pyproject.toml  verify.sh
combo2-advanced-agentic-engineering/expense-categoriser/.github/workflows/: evals.yml  tests.yml
combo2-advanced-agentic-engineering/expense-categoriser/scripts/: create-regression-branch.sh
combo2-advanced-agentic-engineering/expense-categoriser/src/expense_categoriser/: core.py
combo2-advanced-agentic-engineering/expense-categoriser/tests/: test_api.py
combo2-advanced-agentic-engineering/plan-execute-split/: .env.example  .gitignore  README.md  agent.py  pricing.py  pyproject.toml  run_execute.py  run_monolithic.py  run_plan.py  task.md  tools.py  verify.sh
combo2-advanced-agentic-engineering/plan-execute-split/src/expense_categoriser/: api.py  models.py
combo2-advanced-agentic-engineering/plan-execute-split/tests/: conftest.py  test_core.py
combo2-advanced-agentic-engineering/plan-execute-split/tests/evals/: eval_dataset.json  test_categorisation_quality.py
combo2-advanced-agentic-engineering/tiny-agent/: .env.example
combo2-advanced-agentic-engineering/tiny-agent/starter/: tools.py
combo3-building-agents/chroma-corpora/: README.md  pyproject.toml  verify.sh
combo3-building-agents/chroma-corpora/shared/: indexer.py  search.py
combo3-building-agents/chroma-corpora/tests/: test_indexer.py
combo3-building-agents/chroma-corpora/track-a-codebase/: README.md  build.py  search_example.py
combo3-building-agents/chroma-corpora/track-a-codebase/docs/: README.md  api.md  architecture.md  changelog.md  contributing.md  deployment.md  runbook-auth-outage.md  testing.md
combo3-building-agents/chroma-corpora/track-b-helpdesk/: README.md  build.py  search_example.py
combo3-building-agents/chroma-corpora/track-b-helpdesk/docs/: README.md  account-security.md  account-signup.md  billing-and-plans.md  contacting-support.md  data-and-privacy.md  streaks-and-tracking.md  troubleshooting-sync.md  widgets-and-notifications.md
combo3-building-agents/mcp-server/: .gitignore  README.md  claude-code-mcp-config.json.example  pyproject.toml  verify.sh
combo3-building-agents/mcp-server/mcp_filesystem_server/: elicitation_demo.py  server.py  tools.py
combo3-building-agents/mcp-server/sample_repo/: README.md  TODO.md  hello.py  recipes.md
combo3-building-agents/mcp-server/tests/: test_tools.py
combo3-building-agents/track-a-codebase-qa/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  verify.sh
combo3-building-agents/track-a-codebase-qa/backend/: agent.py  guardrails.py  server.py  settings.py  streaming.py  tools.py
combo3-building-agents/track-a-codebase-qa/scripts/: seed-workspace.sh
combo3-building-agents/track-a-codebase-qa/tests/: conftest.py  test_agent.py  test_api.py  test_guardrails.py  test_tools.py
combo3-building-agents/track-a-codebase-qa/ui/: index.html  package.json  vite.config.ts
combo3-building-agents/track-a-codebase-qa/ui/src/: App.tsx  styles.css
combo3-building-agents/track-a-codebase-qa/ui/src/components/: ChatPanel.tsx  InputBar.tsx  Message.tsx  ToolCallBlock.tsx
combo3-building-agents/track-a-codebase-qa/ui/src/hooks/: useStreamingChat.ts
combo3-building-agents/track-b-helpdesk-qa/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  verify.sh
combo3-building-agents/track-b-helpdesk-qa/backend/: agent.py  guardrails.py  server.py  settings.py  streaming.py  tools.py
combo3-building-agents/track-b-helpdesk-qa/scripts/: seed-workspace.sh
combo3-building-agents/track-b-helpdesk-qa/tests/: conftest.py  test_agent.py  test_api.py  test_guardrails.py  test_tools.py
combo3-building-agents/track-b-helpdesk-qa/ui/: index.html  package.json  tsconfig.json  vite.config.ts
combo3-building-agents/track-b-helpdesk-qa/ui/src/: App.tsx  styles.css
combo3-building-agents/track-b-helpdesk-qa/ui/src/components/: ChatPanel.tsx  InputBar.tsx  Message.tsx  ToolCallBlock.tsx
combo3-building-agents/track-b-helpdesk-qa/ui/src/hooks/: useStreamingChat.ts
combo4-agentic-engineering-in-practice/legacy-service/: .env.example  .gitignore  .mcp.json.sample  AGENTS.md  CLAUDE.md  FAKE_SENTRY.md  README.md  pyproject.toml  verify.sh
combo4-agentic-engineering-in-practice/legacy-service/.github/workflows/: tests.yml
combo4-agentic-engineering-in-practice/legacy-service/DOCS/: INSTRUCTIONS.md
combo4-agentic-engineering-in-practice/legacy-service/scripts/: create-regression-branch.sh  gen_logs.py  seed_data.py
combo4-agentic-engineering-in-practice/legacy-service/src/legacy_service/: __init__.py  app.py  db.py  logging_setup.py  orders.py  utils.py
combo4-agentic-engineering-in-practice/legacy-service/tests/: test_smoke.py
combo4-agentic-engineering-in-practice/tiny-agent/: .env.example  README.md  pyproject.toml  verify.sh
combo4-agentic-engineering-in-practice/tiny-agent/reference/: agent.py  tools.py
combo4-agentic-engineering-in-practice/tiny-agent/sample_repo/: TODO.md
combo4-agentic-engineering-in-practice/tiny-agent/starter/: agent.py
combo4-agentic-engineering-in-practice/tiny-agent/tests/: test_tools.py
(+13 files in other folders)
