[project]
name = "chroma-corpora"
version = "0.1.0"
description = "Workshop reference: pre-indexed Chroma corpora for Combo 3 M4 (context engineering). Two tracks: codebase-Q&A and helpdesk."
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
