[project]
name = "mcp-filesystem-server"
version = "0.1.0"
description = "A minimal MCP server exposing read/list/edit filesystem tools. Reference for Combo 3 M5."
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-filesystem-server = "mcp_filesystem_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_filesystem_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
