[project]
name = "track-a-codebase-qa"
version = "0.1.0"
description = "Combo 3 Track A running artefact: a codebase-Q&A agent with a streaming chat UI, backed by the chroma-corpora Track A index."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0.0",
    "pydantic>=2.13",
    "chromadb>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
track-a-server = "backend.server:dev_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
