[project]
name = "track-b-helpdesk-qa"
version = "0.1.0"
description = "Combo 3 Track B running artefact: a Streakly helpdesk agent with KB search, draft replies, and escalation. Twin of track-a-codebase-qa."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0.0",
    "pydantic>=2.13",
    "chromadb>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
track-b-server = "backend.server:dev_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
