[project]
name = "legacy-service"
version = "1.4.2"
description = "Workshop starter: OrderBase, a fictional 2018-era order-tracking service (Flask + sqlite3). The code style is deliberately dated."
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.0",
]

[project.scripts]
orderbase = "legacy_service.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legacy_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
