[project]
name = "tiny-agent"
version = "0.1.0"
description = "A ~200-line Gemini coding agent for Combo 1 M1. Mirrors Thorsten Ball's ampcode walkthrough."
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reference", "starter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
